# smpl

./: .gitignore  CMakeLists.txt  README.md  package.xml
bfs3d/: CMakeLists.txt  package.xml
bfs3d/include/bfs3d/: BFS_3D.h
bfs3d/src/: BFS_3D.cpp  BFS_Util.cpp  Search.cpp
sbpl_arm_planner/: CMakeLists.txt  package.xml
sbpl_arm_planner/include/sbpl_arm_planner/: action_set.h  action_space.h  angles.h  arm_planner_interface.h  bfs_heuristic.h  collision_checker.h  environment_cartrobarm3d.h  environment_robarm3d.h  euclid_dist_heuristic.h  extension.h  joint_dist_heuristic.h  manip_heuristic.h  manip_lattice.h  manip_lattice_action_space.h  manip_lattice_observers.h  motion_primitive.h  multi_frame_bfs_heuristic.h  occupancy_grid.h  planner_interface.h  planning_params.h  post_processing.h  robot_heuristic.h  robot_model.h  robot_planning_space.h  robot_state_lattice.h  sbpl_arm_planner_interface.h  sbpl_arm_planning_error_codes.h  soft_bfs_heuristic.h  types.h  visualize.h  visualizer_ros.h  workspace_lattice.h
sbpl_arm_planner/src/: BFS_3D.cpp  BFS_Util.cpp  action_set.cpp  action_space.cpp  arm_planner_interface.cpp  bfs3d.cpp  bfs_heuristic.cpp  collision_checker.cpp  environment_cartrobarm3d.cpp  environment_robarm3d.cpp  euclid_dist_heuristic.cpp  joint_dist_heuristic.cpp  manip_heuristic.cpp  manip_lattice.cpp  manip_lattice_action_space.cpp  multi_frame_bfs_heuristic.cpp  occupancy_grid.cpp  planner_interface.cpp  planning_params.cpp  post_processing.cpp  robot_heuristic.cpp  robot_model.cpp  robot_planning_space.cpp  robot_state_lattice.cpp  sbpl_arm_planner_interface.cpp  soft_bfs_heuristic.cpp  visualize.cpp  visualizer_ros.cpp  workspace_lattice.cpp
sbpl_arm_planner/src/debug/: visualize.cpp  visualizer_ros.cpp
sbpl_arm_planner/src/graph/: action_space.cpp  manip_lattice.cpp  manip_lattice_action_space.cpp  robot_planning_space.cpp  workspace_lattice.cpp
sbpl_arm_planner/src/heuristic/: bfs_heuristic.cpp  euclid_dist_heuristic.cpp  joint_dist_heuristic.cpp  multi_frame_bfs_heuristic.cpp  robot_heuristic.cpp  soft_bfs_heuristic.cpp
sbpl_arm_planner_test/: CMakeLists.txt  package.xml  package.xml.broken
sbpl_arm_planner_test/env/: tabletop_hdt.env
sbpl_arm_planner_test/experiments/: hdt_goal.yaml
sbpl_arm_planner_test/launch/: goal_hdt.launch  goal_pr2.launch  goal_ubr1.launch
sbpl_arm_planner_test/src/: call_planner.cpp  occupancy_grid_test.cpp  visualizer_test.cpp
sbpl_collision_checking/: CMakeLists.txt  package.xml
sbpl_collision_checking/config/: ur5_config.yaml
sbpl_collision_checking/include/sbpl_collision_checking/: allowed_collisions_interface.h  attached_bodies_collision_model.h  attached_bodies_collision_state.h  base_collision_models.h  base_collision_states.h  body_collision_model.h  collision_model_config.h  collision_space.h  collision_world.h  debug.h  group.h  robot_collision_model.h  robot_collision_motion_model.h  robot_collision_state.h  robot_motion_collision_model.h  sbpl_collision_model.h  sbpl_collision_space.h  types.h  (+5 more)
sbpl_collision_checking/launch/: test_collision_model.launch
sbpl_collision_checking/src/: attached_bodies_collision_model.cpp  attached_bodies_collision_state.cpp  base_collision_models.cpp  base_collision_states.cpp  benchmark_cc.cpp  collision_model_config.cpp  collision_model_impl.cpp  collision_model_impl.h  collision_operations.cpp  collision_operations.h  collision_space.cpp  collision_world.cpp  debug.h  group.cpp  robot_collision_model.cpp  robot_collision_motion_model.cpp  robot_collision_state.cpp  robot_motion_collision_model.cpp  sbpl_collision_model.cpp  sbpl_collision_space.cpp  sbpl_collision_space_objects.cpp  sbpl_collision_space_visualizations.cpp  sbpl_collision_statistics.cpp  self_collision_model.cpp  test_collision_model.cpp  test_collision_space.cpp  test_sbpl_collision_space.cpp  transform_functions.h  types.cpp  voxel_operations.cpp  voxel_operations.h  world_collision_detector.cpp  world_collision_model.cpp
sbpl_collision_checking_test/: CMakeLists.txt  package.xml
sbpl_collision_checking_test/config/: collision_detection_pr2.yaml  collision_model_pr2.yaml  collision_model_ur5.yaml  ur5_config.yaml
sbpl_collision_checking_test/launch/: benchmark.launch  test_collision_model.launch  test_left_arm.launch  test_pr2.launch  test_right_arm.launch
sbpl_collision_checking_test/src/: benchmark_cc.cpp  sbpl_collision_statistics.cpp  test_collision_model.cpp  test_collision_space.cpp  test_sbpl_collision_space.cpp  test_sbpl_collision_space.h
sbpl_kdl_robot_model/: CMakeLists.txt  package.xml
sbpl_kdl_robot_model/src/: kdl_robot_model.cpp  test_kdl_robot_model.cpp
sbpl_manipulation_components/: CMakeLists.txt  package.xml
sbpl_manipulation_components/src/: collision_checker.cpp  kdl_robot_model.cpp  occupancy_grid.cpp  post_processing.cpp  robot_model.cpp  test_kdl_robot_model.cpp
sbpl_manipulation_components_pr2/: CMakeLists.txt  package.xml  package.xml.broken
sbpl_manipulation_components_pr2/src/: action_set.cpp  orientation_solver.cpp  pr2_kdl_robot_model.cpp  sbpl_math.cpp  ubr1_kdl_robot_model.cpp
sbpl_pr2_robot_model/: CMakeLists.txt  package.xml
sbpl_pr2_robot_model/src/: action_set.cpp  orientation_solver.cpp  pr2_kdl_robot_model.cpp  sbpl_math.cpp  ubr1_kdl_robot_model.cpp
smpl/: CMakeLists.txt  package.xml
smpl/src/: bfs3d.cpp  collision_checker.cpp  csv_parser.cpp  occupancy_grid.cpp  planner_interface.cpp  planning_params.cpp  post_processing.cpp  profiling.h  robot_model.cpp
smpl_ros/: CMakeLists.txt  package.xml
smpl_test/: CMakeLists.txt  package.xml
smpl_test/config/: pr2_right_arm.yaml  xy_24_connected.mprim  xy_8_connected.mprim
smpl_test/env/: tabletop.env
smpl_test/experiments/: pr2_goal.yaml
smpl_test/launch/: goal_pr2.launch  goal_ubr1.launch  grid_world_test.launch
smpl_test/src/: call_planner.cpp  csv_parser_test.cpp  debug_vis_demo.cpp  distance_map_test.cpp  egraph_test.cpp  heap_test.cpp  occupancy_grid_test.cpp  octree_tests.cpp  sparse_binary_grid_test.cpp  sparse_grid_test.cpp  visualizer_test.cpp  xytheta.cpp
(+239 files in other folders)
