<package>
  <name>sbpl_manipulation</name>
  <version>0.0.0</version>
  <description>
    Planning for manipulators using SBPL

    bfs3d: Motion Planning Research for a Robotic Manipulator; Written by Harsh Pandey
    sbpl_arm_planner:
        Motion Planning Research for a Robotic Manipulator
        Benjamin Cohen - University of Pennsylvania
        Advised by:
        Sachin Chitta - Willow Garage
        Maxim Likhachev - Carnegie Mellon University

    sbpl_collision_checking:
        SBPL 3D Collision Checking Library
        Benjamin Cohen - University of Pennsylvania
        Advised by:
        Maxim Likhachev - Carnegie Mellon University

    sbpl_manipulation_components:
        Benjamin Cohen - University of Pennsylvania
        Advised by:
        Sachin Chitta - Willow Garage
        Maxim Likhachev - Carnegie Mellon University
  </description>

  <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>leatherman</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sbpl_geometry_utils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>leatherman</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sbpl_geometry_utils</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
