<package>
  <name>bfs3d</name>
  <version>0.0.0</version>
  <description>Motion Planning Research for a Robotic Manipulator; Written by Harsh Pandey</description>
  <author email="bcohen@seass.upenn.edu">Benjamin Cohen</author>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
</package>
