<package>
  <name>sbpl_arm_planner</name>
  <version>0.0.0</version>
  <description>
    Motion Planning Research for a Robotic Manipulator
    Benjamin Cohen - University of Pennsylvania
    Advised by:
    Sachin Chitta - Willow Garage
    Maxim Likhachev - Carnegie Mellon University
  </description>
  <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>bfs3d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>leatherman</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sbpl</build_depend>
  <build_depend>sbpl_geometry_utils</build_depend>
  <build_depend>sbpl_manipulation_components</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>bfs3d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>leatherman</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sbpl</run_depend>
  <run_depend>sbpl_geometry_utils</run_depend>
  <run_depend>sbpl_manipulation_components</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
