<package format="2">
    <name>sbpl_arm_planner</name>
    <version>0.0.0</version>
    <description>Motion Planning for Robotic Manipulators</description>
    <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
    <author>Harsh Pandey</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>boost</depend>
    <depend>cmake_modules</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>leatherman</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>roscpp</depend>
    <!-- TODO: non-ros sbpl dependency -->
    <depend>sbpl_geometry_utils</depend>
    <depend>tf</depend>
    <depend>trajectory_msgs</depend>
    <depend>visualization_msgs</depend>
</package>
