<package format="2">
    <name>sbpl_collision_checking</name>
    <version>0.0.0</version>
    <description>Approximate Collision Checking Library</description>
    <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>boost</depend>
    <depend>cmake_modules</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>geometric_shapes</depend>
    <depend>geometry_msgs</depend>
    <depend>kdl_parser</depend>
    <depend>leatherman</depend>
    <depend>message_filters</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>orocos_kdl</depend>
    <depend>pr2_controllers_msgs</depend>
    <depend>roscpp</depend>
    <depend>sbpl_arm_planner</depend>
    <depend>sbpl_geometry_utils</depend>
    <depend>sensor_msgs</depend>
    <depend>shape_msgs</depend>
    <depend>tf_conversions</depend>
    <depend>urdf</depend>
    <depend>visualization_msgs</depend>
</package>
