<package format="2">
    <name>sbpl_collision_checking_test</name>
    <version>0.0.0</version>
    <description>sbpl_collision_checking_test</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometric_shapes</depend>
    <depend>geometry_msgs</depend>
    <depend>leatherman</depend>
    <depend>moveit_msgs</depend>
    <depend>roscpp</depend>
    <depend>sbpl_collision_checking</depend>
    <depend>urdf</depend>
    <depend>visualization_msgs</depend>

    <exec_depend>ur_description</exec_depend>
</package>
