<package format="2">
    <name>sbpl_pr2_robot_model</name>
    <version>0.0.0</version>
    <description>Implementation of an sbpl robot model for the PR2</description>
    <author email="bcohen@seas.upenn.edu">Benjamin Cohen</author>
    <maintainer email="bcohen@seas.upenn.edu">Benjamin Cohen</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>angles</depend>
    <depend>orocos_kdl</depend>
    <depend>pr2_arm_kinematics</depend>
    <depend>roscpp</depend>
    <depend>sbpl_geometry_utils</depend>
    <depend>sbpl_kdl_robot_model</depend>
    <depend>urdf</depend>
</package>
